[package]
name = "catalyst-nix"
version = "0.1.0"
edition = "2024"

[dependencies]
snix-eval = { git = "https://git.snix.dev/snix/snix.git", rev = "afec95e2" }

reqwest = { version = "0.12.22", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.41", features = ["derive"] }
